--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "book-seat",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Nur Ridho A",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
@@ -27,6 +27,7 @@
     "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.3.0",
     "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "5.3.0",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
@@ -47,6 +48,7 @@
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
+    "@capacitor/assets": "^3.0.1",
     "@capacitor/cli": "5.3.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
