--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
+<plist version="1.0.2">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-        <string>book-seat</string>
+	<string>Book Seat SIT</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -22,6 +22,12 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs to scan various barcodes</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app needs to collect photos to scan</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs to collect photos to scan</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -45,11 +51,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
-	<key>NSCameraUsageDescription</key>
-	<string>This app needs to scan various barcodes</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>This app needs to collect photos to scan</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app needs to collect photos to scan</string>
 </dict>
 </plist>
