--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@awesome-cordova-plugins/core": "^6.9.0",
+    "@awesome-cordova-plugins/native-geocoder": "^6.9.0",
     "@capacitor-mlkit/barcode-scanning": "^5.3.0",
     "@capacitor/android": "5.3.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.3.0",
+    "@capacitor/geolocation": "^6.0.1",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.3.0",
     "@capacitor/keyboard": "5.0.6",
